--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -69,9 +69,9 @@ button:hover {
   border-color: #396cd8;
 }
 
-input,
-button {
-  outline: none;
+input:focus,
+button:focus {
+  outline-offset: -2px;
 }
 
 @import "theme";
