Add DeckList, DeckListItem components
add Badge component
add vue-unicons dependency

--- a/src/styles/_light.scss
+++ b/src/styles/_light.scss
@@ -1,6 +1,6 @@
 :root {
   color: #0f0f0f;
-  background-color: #f6f6f6;
+  background-color: #f3f3f3;
 }
 
 a:hover {
@@ -16,4 +16,8 @@ button {
 button:active {
   border-color: #396cd8;
   background-color: #e8e8e8;
+}
+
+.icon {
+  fill: #000000;
 }
