--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -1,4 +1,5 @@
 @import "mixins";
+@import "variables";
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
@@ -13,13 +14,30 @@
   -webkit-text-size-adjust: 100%;
 }
 
-.container {
+.content,
+.content--center,
+.content--focus,
+.content--w-header {
+  width: 100%;
   margin: 0;
-  padding-top: 10vh;
   display: flex;
-  flex-direction: column;
   justify-content: center;
   text-align: center;
+}
+
+.content--center {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.content--w-header {
+  padding-top: $header-height;
+}
+
+.content--focus {
+  max-width: 650px;
 }
 
 .logo {
@@ -31,11 +49,6 @@
 
 .logo.tauri:hover {
   filter: drop-shadow(0 0 2em #24c8db);
-}
-
-.row {
-  display: flex;
-  justify-content: center;
 }
 
 a {
@@ -65,13 +78,22 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+button:active {
   border-color: #396cd8;
 }
 
 input:focus,
 button:focus {
   outline-offset: -2px;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+ul > li {
+  margin-left: 20px
 }
 
 @import "theme";
