--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -55,6 +55,7 @@ a {
   font-weight: 500;
   color: #646cff;
   text-decoration: inherit;
+  cursor: pointer;
 }
 
 h1 {
@@ -63,15 +64,25 @@ h1 {
 
 input,
 button {
+  padding: 0.6em 1.2em;
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
   transition: border-color 0.25s;
+  box-sizing: border-box;
   box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
   @include user-select-none;
+}
+
+input:focus,
+button:focus {
+  outline-offset: -2px;
+}
+
+input:focus {
+  cursor: text
 }
 
 button {
@@ -82,9 +93,8 @@ button:active {
   border-color: #396cd8;
 }
 
-input:focus,
-button:focus {
-  outline-offset: -2px;
+label {
+  display: block;
 }
 
 ul {
