--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -67,6 +67,9 @@ button {
   padding: 0.6em 1.2em;
   border-radius: 8px;
   border: 1px solid transparent;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
