--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -40,15 +40,8 @@
   max-width: 650px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: 0.75s;
-}
-
-.logo.tauri:hover {
-  filter: drop-shadow(0 0 2em #24c8db);
+::selection {
+  background-color: rgba(31, 111, 235, 0.7);
 }
 
 a {
@@ -85,7 +78,7 @@ button:focus {
 }
 
 input:focus {
-  cursor: text
+  cursor: text;
 }
 
 button {
