--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -73,6 +73,43 @@ button {
   @include user-select-none;
 }
 
+input[type="radio"] {
+  appearance: none;
+  position: relative;
+  width: 1.5em;
+  height: 1.5em;
+  margin: 0;
+  padding: 0;
+  border-radius: 50%;
+  display: inline-block;
+  @include user-select-none;
+  cursor: pointer;
+
+  &+label {
+    padding-left: 0.5em;
+    cursor: pointer;
+  }
+
+  &:active,
+  &:checked {
+    @include user-select-none;
+    cursor: pointer;
+  }
+
+  &:checked::before {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 0.5em;
+    height: 0.5em;
+    margin-top: -0.25em;
+    margin-left: -0.25em;
+    border-radius: 50%;
+    background-color: white;
+  }
+}
+
 input:focus,
 button:focus {
   outline-offset: -2px;
